overflow solved

--- a/styles.css
+++ b/styles.css
@@ -3,24 +3,21 @@
 /* Overall calculator styles */
 .calculator {
   margin-top: 5rem;
-  background-color: black;
-  border: 1px solid white;
-  border-radius: 8px;
   padding: 1rem;
 }
 
 /* Calculation input field */
 #calculation {
   text-align: right;
-  color: #161515;
+  color: black;
   font-weight: 500;
   font-size: 1.5rem;
   border: none;
-  background-color: transparent;
+  background-color: white;
+  padding: 0.5rem;
   margin-bottom: 1rem;
   overflow: hidden;
   white-space: nowrap;
-  text-overflow: ellipsis;
 }
 
 /* Calculator buttons container */
@@ -135,4 +132,3 @@
     margin-bottom: 1rem;
   }
 }
-
